--- a/KrausxRGA/App.xaml
+++ b/KrausxRGA/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="KrausGRA.App"
+﻿<Application x:Class="KrausRGA.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="UI/wndBoxInformation.xaml">
@@ -61,6 +61,7 @@
             <Setter Property="Foreground" Value="WhiteSmoke"/>
             <Setter Property="FontSize" Value="45"/>
         </Style>
+
         <!--  _________________________ -->
         
         
