--- a/KrausxRGA/UI/MainWindow.xaml
+++ b/KrausxRGA/UI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KrausGRA.MainWindow"
+﻿<Window x:Class="KrausRGA.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cam="clr-namespace:WebcamControl;assembly=WebcamControl"
