--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="KrausGRA.UI.wndBoxInformation"
+﻿<Window x:Class="KrausRGA.UI.wndBoxInformation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Kraus GRA System" Height="800" Width="1400"
-        Name="wndLogin" Loaded="wndLogin_Loaded" WindowState="Maximized"
-        >
+        Name="wndLogin" Loaded="wndLogin_Loaded" WindowState="Maximized">
     <Viewbox >
         <Grid>
             <Border BorderThickness="2" BorderBrush="#FFD49919">
@@ -16,7 +15,7 @@
                             </LinearGradientBrush>
                         </Canvas.Background>
                         <Image x:Name="imgLogo" Height="80" Canvas.Left="1" Canvas.Top="10" Width="211" Stretch="Fill" Cursor="None" Source="/KrausGra;component/Images/logo.png"/>
-                        <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="GRA Manager" Canvas.Top="27" Height="46" Width="424" FontSize="30" Foreground="White"/>
+                        <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="RGA Manager" Canvas.Top="27" Height="46" Width="424" FontSize="30" Foreground="White"/>
                     </Canvas>
 
                     <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Left="1" Canvas.Top="100" CornerRadius="20" Background="#B21B4064" Height="677">
@@ -24,15 +23,15 @@
                             <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Top="59" Width="305" Background="#FF424140" Canvas.Left="15" BorderBrush="Black">
                                 <Button x:Name="btnNewScan" Style="{StaticResource win8btn}" Content="New Return" Margin="-1,-1,-1,1"/>
                             </Border>
-                            <TextBlock TextWrapping="Wrap" Text="New Return" FontWeight="Bold" TextAlignment="Center" FontSize="35" Width="332" Canvas.Left="5"  Canvas.Top="6" Foreground="#FFD49611"/>
-                            <TextBlock TextWrapping="Wrap" Text="Scan Barcode from Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="172" FontSize="35" Width="337" Foreground="#FF79CB84"/>
-                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="423" Width="305" Background="#FF474747">
+                            <TextBlock TextWrapping="Wrap"  Text="New Return" FontWeight="Bold" TextAlignment="Center" FontSize="35" Width="332" Canvas.Left="5"  Canvas.Top="6" Foreground="#FFD49611"/>
+                            <TextBlock TextWrapping="Wrap" Visibility="Hidden" Text="Scan Barcode from Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="508" FontSize="35" Width="337" Foreground="#FF79CB84"/>
+                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="219" Width="305" Background="#FF474747">
                                 <Button x:Name="btnPONumber" Style="{StaticResource win8btn}" Content="Enter Number" Margin="-1,-1,-1,1" Click="btnPONumber_Click"/>
                             </Border>
-                            <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="271" Width="305" Background="#FF3E3F42">
+                            <Border Visibility="Hidden" Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="5" Canvas.Top="587" Width="305" Background="#FF3E3F42">
                                 <Button x:Name="btnBoxNumber" Style="{StaticResource win8btn}" Content="Scan" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
                             </Border>
-                            <TextBlock TextWrapping="Wrap" Text="SR # of Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="371" FontSize="35" Width="337" Foreground="White"/>
+                            <TextBlock TextWrapping="Wrap" Text="SR # of Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="167" FontSize="35" Width="337" Foreground="White" Canvas.Left="-7"/>
                         </Canvas>
                     </Border>
 
