--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KrausGRA.UI.wndSrNumberInfo"
+﻿<Window x:Class="KrausRGA.UI.wndSrNumberInfo"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
        Title="Kraus GRA System" Height="800" Width="1400" WindowState="Maximized">
@@ -15,7 +15,7 @@
                             </LinearGradientBrush>
                         </Canvas.Background>
                         <Image x:Name="imgLogo" Height="80" Canvas.Left="1" Canvas.Top="10" Width="211" Stretch="Fill" Cursor="None" Source="/KrausGra;component/Images/logo.png"/>
-                        <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="GRA Manager" Canvas.Top="27" Height="46" Width="424" FontSize="30" Foreground="White"/>
+                        <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="RGA Manager" Canvas.Top="27" Height="46" Width="424" FontSize="30" Foreground="White"/>
                     </Canvas>
                     <Canvas Name="cvMainArea" Height="677" Canvas.Top="100" Width="1400">
                         <TabControl Height="677" Width="1400" BorderBrush="#FF405EB8" Margin="2,2,2,2">
@@ -90,7 +90,6 @@
                                             </Canvas>
                                         </Border>
 
-
                                     </Canvas>
                                 </Border>
                             </TabItem>
@@ -98,25 +97,33 @@
                                 <Border Name="bdrmain2" >
                                     <Canvas Name="cvsTb1main2" Margin="0,0,0,0">
                                         <!-- Grid View-->
+                                        <Border Visibility="Visible" x:Name="bdrButtonTemp" Height="62" Width="249" Canvas.Left="788" Canvas.Top="437" Loaded="bdrButtonTemp_Loaded">
+                                            <TextBox x:Name="btnTemp" TextWrapping="Wrap" Text="" Background="{x:Null}" BorderBrush="{x:Null}" SelectionBrush="{x:Null}" Foreground="{x:Null}" CaretBrush="White"/>
+
+
+
+                                        </Border>
+
+                                        <!-- Grid View-->
                                         <DataGrid  x:Name="dgPackageInfo"
-                                                   SelectionMode="Extended" 
-                                                   ItemsSource="{Binding}" 
-                                                   HorizontalAlignment="Center" 
-                                                   VerticalAlignment="Center"
-                                                   Width="1380" 
-                                                   ScrollViewer.CanContentScroll="False" 
-                                                   ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
-                                                   CanUserAddRows="False"    
-                                                   AutoGenerateColumns="False" 
-                                                   FontSize="17" 
-                                                   Background="#FFE6E6E6" 
-                                                   SelectionUnit="Cell" 
-                                                   BorderThickness="1" 
-                                                   Cursor="Hand"   
-                                                   BorderBrush="{x:Null}" 
-                                                   HorizontalGridLinesBrush="#FF575757" 
-                                                   VerticalGridLinesBrush="Gray"
-                                                   Height="545" >
+                                    		SelectionMode="Extended" 
+                                    		ItemsSource="{Binding}" 
+                                    		HorizontalAlignment="Center" 
+                                    		VerticalAlignment="Center"
+                                    		Width="1380" 
+                                    		ScrollViewer.CanContentScroll="False" 
+                                    		ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                                    		CanUserAddRows="False"    
+                                    		AutoGenerateColumns="False" 
+                                    		FontSize="17" 
+                                    		Background="#FFE6E6E6" 
+                                    		SelectionUnit="Cell" 
+                                    		BorderThickness="1" 
+                                    		Cursor="Hand"   
+                                    		BorderBrush="{x:Null}" 
+                                    		HorizontalGridLinesBrush="#FF575757" 
+                                    		VerticalGridLinesBrush="Gray"
+                                    		Height="545" >
 
                                             <DataGrid.Resources>
                                                 <Style x:Key="HeaderStyleKey" TargetType="{x:Type DataGridColumnHeader}">
@@ -130,34 +137,34 @@
                                                     <DataGridTemplateColumn.CellTemplate>
                                                         <DataTemplate >
                                                             <StackPanel >
-                                                                <CheckBox Name="chkIsItemPresent" Content=""/>
+                                                                <CheckBox x:Name="chkIsItemPresent" Content=""/>
                                                             </StackPanel>
                                                         </DataTemplate>
                                                     </DataGridTemplateColumn.CellTemplate>
                                                 </DataGridTemplateColumn>
                                                 <DataGridTextColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
-                                                                    Binding="{Binding SKU}" 
-                                                                    Header="SKU"  
-                                                                    Width="180" 
-                                                                    IsReadOnly="True" />
+                                    				Binding="{Binding SKU}" 
+                                    				Header="SKU"  
+                                    				Width="180" 
+                                    				IsReadOnly="True" />
 
                                                 <DataGridTextColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
-                                                                    Binding="{Binding ProductName}" 
-                                                                    Header="Product Name" 
-                                                                    Width="250" 
-                                                                    IsReadOnly="True" />
+                                    				Binding="{Binding ProductName}" 
+                                    				Header="Product Name" 
+                                    				Width="250" 
+                                    				IsReadOnly="True" />
 
                                                 <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
-                                                                        Header="Qty"
-                                                                        Width="150">
+                                    				Header="Qty"
+                                    				Width="150">
 
                                                     <DataGridTemplateColumn.CellTemplate>
                                                         <DataTemplate>
-                                                            <StackPanel Name="spQty1" Width="150">
-                                                                <TextBlock Name="tbQty" TextAlignment="Center" Width="150" Text="0" FontSize="20"/>
-                                                                <StackPanel Name="spQty2" Orientation="Horizontal">
-                                                                    <Button Name="btnMinus" Content="-" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey } }" Width="75" Height="40" FontSize="30" Foreground="White" Background="#FF464646" />
-                                                                    <Button Name="btnPluse" Content="+" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="75" Height="40" FontSize="30" Foreground="White" Background="#FF464646"/>
+                                                            <StackPanel x:Name="spQty1" Width="150">
+                                                                <TextBlock x:Name="tbQty" TextAlignment="Center" Width="150" Text="0" FontSize="20"/>
+                                                                <StackPanel x:Name="spQty2" Orientation="Horizontal">
+                                                                    <Button x:Name="btnMinus" Content="-" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="75" Height="40" FontSize="30" Foreground="White" Background="#FF464646" />
+                                                                    <Button x:Name="btnPluse" Content="+" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Width="75" Height="40" FontSize="30" Foreground="White" Background="#FF464646"/>
                                                                 </StackPanel>
                                                             </StackPanel>
                                                         </DataTemplate>
@@ -165,8 +172,8 @@
                                                 </DataGridTemplateColumn>
 
                                                 <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}"
-                                                                        Header="Image" 
-                                                                        Width="*"  >
+                                    				Header="Images" 
+                                    				Width="*"  >
                                                     <DataGridTemplateColumn.CellTemplate>
                                                         <DataTemplate >
                                                             <StackPanel >
@@ -179,13 +186,18 @@
 
                                         </DataGrid>
                                         <!-- Grid Finish-->
-                                        <Border Name="bdrButton" Height="62" Width="249" Canvas.Left="1088" Canvas.Top="553">
+                                        <Border x:Name="bdrButton" Height="62" Width="249" Canvas.Left="1088" Canvas.Top="553">
                                             <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
-                                                Content="Save" Width="249" Height="62" Background="#FF464343" Foreground="#FFF9F9F9" OpacityMask="Black"
-                                                
+                                    			Content="Save" 
+                                    			Width="249" 
+                                    			Height="62" 
+                                    			Background="#FF464343" 
+                                    			Foreground="#FFF9F9F9" 
+                                    			OpacityMask="Black"
                                                 />
 
                                         </Border>
+
                                     </Canvas>
                                 </Border>
                             </TabItem>
