--- a/KrausxRGA/App.xaml
+++ b/KrausxRGA/App.xaml
@@ -8,14 +8,16 @@
 <!-- Controls From Main Informaion Screen -->
         <Style x:Key="lblConstant" TargetType="Label">
             <Setter Property="FontFamily" Value="Arial"/>
-            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="FontSize" Value="{DynamicResource ContactFontSize}"/>
             <Setter Property="HorizontalContentAlignment" Value="Right"/>
         </Style>
         <Style x:Key="lblVeriable" TargetType="Label">
-            <Setter Property="FontSize" Value="22"/>
+            <Setter Property="FontSize" Value="{DynamicResource FontSize}"/>
             <Setter Property="FontFamily" Value="Arial"/>
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
+        
+       
         <Style x:Key="cbStyleKey" TargetType="CheckBox">
             <Setter Property="FontSize" Value="10"/>
             <Setter Property="FontFamily" Value="Arial"/>
@@ -81,9 +83,10 @@
         <Style x:Key="tbFormTitle" TargetType="TextBlock">
             <Setter Property="FontFamily" Value="Arial"/>
             <Setter Property="Foreground" Value="WhiteSmoke"/>
-            <Setter Property="FontSize" Value="45"/>
+            <Setter Property="FontSize" Value="{DynamicResource HeaderSize}"/>
         </Style>
 
+        
         <!--  _________________________ -->
         
         
