--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -31,7 +31,7 @@
                     <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Left="1" Canvas.Top="100" Background="#B20B4F70" Height="677">
                         <Canvas Name="cnNewReturn" Width="340" Canvas.Top="128" >
                             <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Top="59" Width="305" Background="#FF424140" Canvas.Left="15" BorderBrush="Black">
-                                <Button x:Name="btnNewScan" Style="{StaticResource win8btn}" Content="New Return" Margin="-1,-1,-1,1"/>
+                                <Button x:Name="btnNewScan" Style="{StaticResource win8btn}" Content="Application Setting" Margin="-1,-1,-1,1" Click="btnNewScan_Click"/>
                             </Border>
                             <TextBlock TextWrapping="Wrap"  Text="New Return" FontWeight="Bold" TextAlignment="Center" FontSize="35" Width="332" Canvas.Left="5"  Canvas.Top="6" Foreground="#FFD49611"/>
                             <TextBlock TextWrapping="Wrap" Visibility="Hidden" Text="Scan Barcode from Return" FontWeight="Bold" TextAlignment="Center" Canvas.Top="508" FontSize="35" Width="337" Foreground="#FF79CB84"/>
