--- a/KrausxRGA/UI/wndAppSetting.xaml
+++ b/KrausxRGA/UI/wndAppSetting.xaml
@@ -1,23 +1,56 @@
 ﻿<Window x:Class="KrausRGA.UI.wndAppSetting"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Application Setting" Height="331" Width="654" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
-    <Grid Margin="0,3,0,-3">
-        <Slider x:Name="sldfont" HorizontalAlignment="Left" Margin="197,32,0,0" VerticalAlignment="Top" Width="235" Minimum="-15" Maximum="15" ValueChanged="sldfont_ValueChanged"/>
-        <Label Content="A" HorizontalAlignment="Left" Margin="155,26,0,0" VerticalAlignment="Top" FontSize="20"/>
-        <Label Content="A" HorizontalAlignment="Left" Margin="447,15,0,0" VerticalAlignment="Top" FontSize="36" />
-        <Label Content="A" HorizontalAlignment="Left" Margin="210,71,0,0" VerticalAlignment="Top" FontSize="45" Height="74" />
-        <TextBlock Text="A" HorizontalAlignment="Left" Margin="374,88,0,0" VerticalAlignment="Top" Style="{StaticResource tbFormTitle}" Foreground="Black" />
-        <Label Content="Header Font" HorizontalAlignment="Left" Margin="29,90,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20" />
-        <Label Content="Control Font" HorizontalAlignment="Left" Margin="29,149,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20"/>
-        <Label Content="A" Name="lblcontrolfont" HorizontalAlignment="Left" Margin="216,143,0,0" VerticalAlignment="Top" FontSize="22" />
-        <Label Content="A" HorizontalAlignment="Left" Margin="372,145,0,0" VerticalAlignment="Top" Style="{StaticResource lblVeriable}" />
-        <Label Content="Label Font" HorizontalAlignment="Left" Margin="29,204,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20" />
-        <Label Content="A" x:Name="lblcontrolfont_Copy" HorizontalAlignment="Left" Margin="217,197,0,0" VerticalAlignment="Top" FontSize="20" />
-        <Label Content="A" HorizontalAlignment="Left" Margin="372,198,0,0" VerticalAlignment="Top" Style="{StaticResource lblConstant}" />
+        Title="Application Setting" Height="489" Width="724" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
+    <Grid Margin="0,3,-8,-10">
 
-        <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" BorderThickness="1" Canvas.Left="15" Canvas.Top="432" Background="#FF3E3F42" Margin="510,245,21,10">
-            <Button x:Name="btnlogout" Style="{StaticResource win8btn}" Content="OK" Margin="-1" Click="btnlogout_Click"/>
+        <Canvas x:Name="cnTitle" Height="100" Canvas.Left="2" Margin="0,-4,10,370">
+            <Canvas.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF308AA4" Offset="0.54"/>
+                    <GradientStop Color="#FF686868" Offset="0.988"/>
+                    <GradientStop Color="#FF686868"/>
+                </LinearGradientBrush>
+            </Canvas.Background>
+            <Image x:Name="imgLogo" Height="63" Canvas.Left="5" Canvas.Top="20" Width="175" Stretch="None" Cursor="None" Source="/KrausRGA;component/Images/logo.png"/>
+
+        </Canvas>
+
+
+
+
+        <Label Content="A" HorizontalAlignment="Left" Margin="279,237,0,0" VerticalAlignment="Top" FontSize="45" Height="74" />
+        <TextBlock Text="A" HorizontalAlignment="Left" Margin="443,254,0,0" VerticalAlignment="Top" Style="{StaticResource tbFormTitle}" Foreground="Black" />
+        <Label Content="Header Font" HorizontalAlignment="Left" Margin="98,256,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20" />
+        <Label Content="Control Font" HorizontalAlignment="Left" Margin="98,315,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20"/>
+        <Label Content="A" Name="lblcontrolfont" HorizontalAlignment="Left" Margin="285,309,0,0" VerticalAlignment="Top" FontSize="22" />
+        <Label Content="A" HorizontalAlignment="Left" Margin="441,311,0,0" VerticalAlignment="Top" Style="{StaticResource lblVeriable}" />
+        <Label Content="Label Font" HorizontalAlignment="Left" Margin="98,370,0,0" VerticalAlignment="Top" FontFamily="Arial" FontSize="20" />
+        <Label Content="A" x:Name="lblcontrolfont_Copy" HorizontalAlignment="Left" Margin="286,363,0,0" VerticalAlignment="Top" FontSize="20" />
+        <Label Content="A" HorizontalAlignment="Left" Margin="441,364,0,0" VerticalAlignment="Top" Style="{StaticResource lblConstant}" />
+
+             
+        
+        <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" BorderThickness="1" Canvas.Left="15" Canvas.Top="432" Background="#FF3E3F42" Margin="523,388,64,36">
+            <Button x:Name="btnlogout" Style="{StaticResource win8btn}" Content="OK" Margin="-1,-2,-1,-1" Click="btnlogout_Click"/>
+        </Border>
+        <Label Content="Application Setting" FontFamily="Arial" FontSize="28" HorizontalAlignment="Left" Margin="192,102,0,0" VerticalAlignment="Top" Width="260" />
+        <TextBlock x:Name="tbProjectTitle" TextWrapping="Wrap" Text="RGA Manager" FontSize="25" Foreground="White" FontWeight="Bold" Margin="255,30,268,396">
+            <TextBlock.Effect>
+                <DropShadowEffect Color="#FF363636" BlurRadius="15"/>
+            </TextBlock.Effect>
+        </TextBlock>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="68" Margin="0,150,0,0" VerticalAlignment="Top" Width="714">
+            <Canvas Margin="-1,0,9,0">
+                <Border/>
+                <Border/>
+                <Border/>
+                <Label Content="A" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="36" RenderTransformOrigin="17.697,0.672" Canvas.Left="464" />
+                <Slider x:Name="sldfont" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="277" Minimum="-15" Maximum="15" ValueChanged="sldfont_ValueChanged" Canvas.Left="162" Canvas.Top="25"/>
+                <Label Content="A" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="20" Canvas.Left="109" Canvas.Top="10"/>
+            </Canvas>
+
+
         </Border>
     </Grid>
 </Window>
